<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".AssessmentFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/assessment_title"
                    style="@style/Label"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_hint"
                    android:gravity="center"
                    style="@style/Text"
                    app:layout_constraintTop_toBottomOf="@id/title_label" />

                <TextView
                    android:id="@+id/start_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_label"
                    style="@style/Label"
                    app:layout_constraintTop_toBottomOf="@id/title_edit" />

                <TextView
                    android:id="@+id/start_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/start_hint"
                    style="@style/Text"
                    app:layout_constraintTop_toBottomOf="@id/start_label" />

                <DatePicker
                    android:id="@+id/start_DP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/start_text" />

                <TextView
                    android:id="@+id/end_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_label"
                    style="@style/Label"
                    app:layout_constraintTop_toBottomOf="@id/start_DP" />

                <TextView
                    android:id="@+id/end_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_hint"
                    android:gravity="center"
                    style="@style/Text"
                    app:layout_constraintTop_toBottomOf="@id/end_label" />

                <DatePicker
                    android:id="@+id/end_DP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/end_text" />

            </LinearLayout>

                <RadioGroup
                    android:id="@+id/radio_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_perf"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/performanceAssessment"
                        android:gravity="center"/>

                    <RadioButton
                        android:id="@+id/radio_obj"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/objectiveAssessment"
                        android:gravity="center"/>

                </RadioGroup>

            <LinearLayout
                android:id="@+id/linear_layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/radio_section">

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_button"
                    app:layout_constraintTop_toTopOf="@id/linear_layout_1" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_button"
                    app:layout_constraintTop_toTopOf="@id/linear_layout_1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

