<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/note_section_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/note_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/note_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/note_title"
                app:layout_constraintLeft_toLeftOf="@+id/note_bar"></EditText>

            <ImageButton
                android:id="@+id/delete_note_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/x"
                android:contentDescription="@string/delete_note"/>

            <Button
                android:id="@+id/share_note_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_note_button" />

        </LinearLayout>

        <EditText
            android:id="@+id/note_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_body_hint"></EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/note_body"></View>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>